Google Drive: Folder tree in the side bar has the first letter cut off, and expanded/collapsed state not announced by VoiceOver.
Categories
(Core :: Disability Access APIs, defect, P1)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox84 | --- | verified |
People
(Reporter: MarcoZ, Assigned: morgan)
References
Details
(Whiteboard: [Mac2020_2])
Attachments
(1 file)
Steps:
- Open Drive.
- Shift+Tab until you reach the folders side bar.
- Expected: VoiceOver reads the label for the tree, and the full selected item name, in my case "Priority".
- Actual: VoiceOver reads everything, but cuts off the first letter, only reads "riority".
- DownArrow onto My Files, which in my case is the second item.
- Expected: VoiceOver reads the My Files folder name along with the fact that it is collapsed.
- Actual: VoiceOver reads "y Files", and does not indicate expanded or collapsed state.
Very simplified test case, which reproduces both problems and is roughly modeled after what is in Google Drive:
data:text/html,<button>Before</button><div role="tree" tabindex="0" aria-label="My drive" aria-activedescendant="myfiles"><div id="myfiles" role="treeitem" aria-label="My files" aria-selected="true" aria-expanded="false">My files</div><div role="treeitem" aria-label="Shared items" aria-selected="false" aria-expanded="false">Shared items</div></div>.
| Reporter | ||
Comment 1•5 years ago
•
|
||
The stripping of the first character is probably due to the code in MoxLabel in MozTableAccessible.mm introduced with bug 1644810 that strips the leading character to get rid of list bullet characters. However, not all outlines are built with ul and li elements, as can be seen on Google Drive, and in my distilled test case above. It's perfectly legal for WAI-ARIA to do so, so our code should not assume that we always have list bullets to strip. ;-)
| Assignee | ||
Updated•5 years ago
|
| Assignee | ||
Comment 2•5 years ago
|
||
Comment 4•4 years ago
|
||
| bugherder | ||
Updated•4 years ago
|
Comment 5•4 years ago
|
||
Confirmed issue with 84.0a1 (2020-11-12) on macOS 11.0.1, verified with 84.0b2, 85.0a1 (2020-11-19).
Description
•