Bug 1676878: Modify moxLabel to not strip first character for outlines r=eeejay

Differential Revision: https://phabricator.services.mozilla.com/D96895